gcc/testsuite/g++.dg/diagnostic/pr96045-2.C
// PR 96045  EOF location

template <class> class A {};
struct A <int> // { dg-error "15:" }
/* A comment */
  
